# tastytrade-rs

./: Cargo.toml  README.md
examples/: accounts-status.rs  market-data.rs  option-chains.rs  quote-streaming.rs  test_login.rs  transactions.rs
src/: client.rs  lib.rs
src/api/: account_streaming.rs  accounts.rs  auth.rs  base.rs  event.rs  instrument.rs  login.rs  market_data.rs  mod.rs  oauth2.rs  option_chain.rs  order.rs  position.rs  quote_streaming.rs  transaction.rs
src/api/quote_streaming/: dxlink.rs  error.rs  mod.rs  types.rs
tests/: accounts_status_demo.rs  oauth2_authentication_demo.rs  oauth2_backward_compat_demo.rs  option_chain_demo.rs  orders_demo.rs  test_utils.rs  transactions_demo.rs
