[package]
name = "tastytrade-rs"
version = "0.6.1"
edition = "2021"
license = "MIT"
description = "Library for trading through tastytrade's API"
repository = "https://github.com/MCHSL/tastytrade-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "test_login"
path = "examples/test_login.rs"

[[example]]
name = "accounts-status"
path = "examples/accounts-status.rs"

[[example]]
name = "quote-streaming"
path = "examples/quote-streaming.rs"

[dependencies]
derive_builder = "0.12.0"
once_cell = "1.21"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.40", features = [
	"serde-with-arbitrary-precision",
	"serde-with-float",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
flume = "0.10.14"
widestring = "1.2"
url = "2.5"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"
erased-serde = "0.3"
dxlink-rs = { git = "https://github.com/ravinagabhyru/dxlink-rs.git", rev = "c6ac46ae724dc5e3a2e512db5aaea81b8f81f5f0" }
chrono = { version = "0.4", features = ["serde"] }
serde_with = "3.16"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
